# protobuf-gn

./: BUILD.gn  BUILD.input.gn  OWNERS  README.md  gen.py  proto_library.gni  protoc_wrapper.py
src/test/: custom_options.cc  custom_options.proto
test/: BUILD.gn
